--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https:www.regulardesigner.com/exchange",
+  "homepage": "https://regulardesigner.github.io/exchange-rates",
   "name": "exchange-rates",
   "version": "0.1.0",
   "private": true,
